# blr-core

./: BENCHMARK_GUIDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: blr_bench.rs
data/: hall_sensor_calibration.csv  lin_data.csv
examples/: hall_sensor.rs  noise_estimation_workflow.rs  quick_start.rs
src/: ard.rs  error.rs  features.rs  gaussian.rs  lib.rs  noise_estimation.rs  synthetic_data.rs
tests/: test_fit.rs  test_parity.rs  test_predict.rs
